--- a/views/contractor/addlabour.hbs
+++ b/views/contractor/addlabour.hbs
@@ -13,7 +13,7 @@
     
     <div class="container">
         <div class="msg">{{msg}}</div>
-        {{> adminProducts products=products}}
+        {{> contractorlabour products=labours}}
     </div>
 </body>
 
