--- a/views/partials/dashboardnav.hbs
+++ b/views/partials/dashboardnav.hbs
@@ -1,8 +1,8 @@
 <nav class="navbar">
   <div>
     <a class="navItem" href="#">Profile</a>
-    <a class="navItem" href="/shop/products">Hire Labour</a>
-    <a class="navItem" href="/shop/products">Hire contractor</a>
+    <a class="navItem" href="/shop/labours">Hire Labour</a>
+    <a class="navItem" href="/shop/showcontractors">Hire contractor</a>
 
     {{#if this.isAdmin}}
         <a class="navItem" href="/admin/products">Admin Products</a>
