--- a/views/partials/showcontractors.hbs
+++ b/views/partials/showcontractors.hbs
@@ -6,13 +6,11 @@
         </div>
         <div class="productItem-info-wrapper">
             <div class="productItem-info">
-                <div class="name">Name:-{{product.Labour_name}}</div>
-                <div class="price">Wages:-${{product.Labour_wages}}</div>
-                <div class="description">{{product.Labour_profession}}</div>
+                <div class="name">Name:-{{product.contractor_name}}</div>
+                <div class="price">Wages:-${{product.contractor_budget}}</div>
             </div>
             <div class="productItem-action">
                 <button productId={{product._id}} class="addToCart">Send request</button>
-
             </div>
         </div>
     </div>
