--- a/views/shop/receivedRequests.hbs
+++ b/views/shop/receivedRequests.hbs
@@ -13,11 +13,10 @@
 
     <div class="container">
         <div class="msg">{{msg}}</div>
-        {{> showcontractors products=contractors}}
+        {{> receivedRequests contractors=contractors}}
     </div>
     <script src="/scripts/addtocart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
 </body>
 
 </html>
