--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,13 +1,8 @@
 <nav class="navbar">
   <div>
-    <a class="navItem" href="#">Profile</a>
     <a class="navItem" href="/shop/labours">Labours</a>
     <a class="navItem" href="/shop/contractors">contractors</a>
-    {{#if this.isAdmin}}
-        <a class="navItem" href="/admin/products">Admin Labours</a>
-        <a class="navItem" href="/admin/add-product">Add Labours</a>
-    {{/if}}
-
+    <a class="navItem" href="/shop/addToCart">Requests</a>
     <a href="/logout" class="navItem">Logout</a>
   </div>
   <div class="cart">
