--- a/views/shop/products.hbs
+++ b/views/shop/products.hbs
@@ -15,6 +15,8 @@
         <div class="msg">{{msg}}</div>
         {{> shopProducts products=products}}
     </div>
+    <script src="/scripts/addtocart.js"></script>
+
 </body>
 
 </html>
